--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ button {
   width: 100px;
   height: 50px;
 }
-.container{
+.container {
   display: flex;
   flex-wrap: wrap;
   /* width: 50px;
@@ -17,5 +17,19 @@ button {
   background-color: rgb(213, 177, 245);
 }
 .status {
-  color : red;
+  color: red;
+}
+
+/* navigate */
+.navigate{
+  border: 1px solid black;
+  box-shadow:  0 0 10px gray;
+}
+.navigate .list {
+  display: flex;
+  justify-content: space-around;
+  
+}
+.navigate .list li {
+  list-style-type: none;
 }
